# sports-bet

./: .env  .gitignore  CLAUDE.md  daily_pipeline.py  daily_predict.sh  feedback_analyzer.py  fetch_odds.py  line_edge_detector.py  predict_from_paste.py  prediction_server.py  pyproject.toml  quick_edge.sh  requirements.txt  settle_predictions.py  snapshot_lines.py  snapshot_lines.sh  start_tunnel.sh  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: daily_pipeline.yml  monthly-retrain.yml
.streamlit/: config.toml
betting/: backtest.py  handicap_ev.py  handicap_resolver.py  kelly.py  match_filter.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
cli/: main.py
config/: constants.py  settings.py  sports.yaml
data/: sports_bet.db
database/: models.py  repository.py
features/: advanced_features.py  elo_features.py  feature_pipeline.py  form_features.py  handicap_features.py  injury_features.py  league_features.py  line_movement_features.py  matchup_features.py  odds_features.py  player_stats.py  sabermetrics_features.py  schedule_features.py  team_features.py
logs/: server.err
models/: ensemble_model.py  lgbm_model.py  registry.py  training.py  tuning.py
scraper/: b_handicap.py  base_scraper.py  date_utils.py  delta_scraper.py  football_hande.py  handenomori.py  injury_scraper.py  manager.py  nba_stats.py  odds_api.py  odds_manager.py  oddsportal.py  team_name_map.py  xg_scraper.py
scripts/: generate_manual_pdf.py
tests/: test_handicap_resolver.py
web/: app.py
(+43 files in other folders)
